@@ -477,12 +477,13 @@ open_screen_intern(
 	{
 		if( !(disp->win_man.icon) && !(disp->win_man.mask) && !(disp->win_man.cardinal))
 		{
-			x_window_t dummy;
+			x_window_t  dummy ;
+			int  icon_size = 48 ;
 			x_imagelib_load_file( disp->display , main_config.icon_path,
 					      &(disp->win_man.cardinal),
 					      &(disp->win_man.icon),
 					      &(disp->win_man.mask),
-					      48 ,48) ;
+					      &icon_size ,&icon_size) ;
 
 			dummy.my_window = disp->win_man.group_leader ;
 			dummy.display = disp->win_man.display ;
